k8s/example/aok.yaml
apiVersion: v1
kind: Service
metadata:
  name: aok
  namespace: default
spec:
  selector:
    app: aok
    release: "1"
  ports:
  - name: http
    port: 80 
    targetPort: 1154
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aok-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aok
      release: "1"
  template:
    metadata:
      labels:
        app: aok
        release: "1"
    spec:
      containers:
      - name: aok
        image: apporoad/aok:1
        ports:
        - name: aok
          containerPort: 1154
