k8s/example/ingress-aok.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-aok
  namespace: default
  annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: aok.com
    http:
      paths:
      - path:
        backend:
          serviceName: aok
          servicePort: 80
